--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
+    "vue-star-rating": "^1.7.0",
     "vue3-icon": "^2.1.0",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0",
