--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "ionicons": "^7.4.0",
     "peerjs": "^1.5.4",
     "pinia": "^2.1.7",
+    "tippy.js": "^6.3.7",
     "toastr": "^2.1.4",
+    "v-tooltip": "^2.1.3",
     "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
