--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "ionicons": "^7.4.0",
+    "moment": "^2.30.1",
     "peerjs": "^1.5.4",
     "pinia": "^2.1.7",
     "tippy.js": "^6.3.7",
@@ -32,6 +33,8 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
   }
