--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^1.0.6",
     "@iconify/vue": "^4.1.2",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "ionicons": "^7.4.0",
     "moment": "^2.30.1",
